# ReMOSD

./: CMakeLists.txt  MediaOsd.cs  NativeMethods.txt  Program.cs  README.md  ReMOSD.csproj  WindowsMediaOsd.cs  nuget.config
.github/workflows/: dotnet.yml
Windows/Win32/: PInvoke.cs
Windows/Win32/Foundation/: PWSTR.cs
src/: MediaOsd.cpp  MediaOsd.h  Program.cpp  Program.h  main.cpp
src/mtd/: contains_any_of.h  contains_any_of.hpp  trace.h  trace.hpp  traced_error.cpp  traced_error.h
src/utils/: contains_any_of.h  contains_any_of.hpp  retrieve_exception.cpp  retrieve_exception.h  traced_error.cpp  traced_error.h
